# stock_crawl_project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: settings.py  urls.py
stocks/: ai_service.py  models.py  services.py  trading_service.py  urls.py  views.py
stocks/management/commands/: analyze_stocks.py  analyze_w.py  calculate_indicators.py  crawl_stocks.py  init_stocks.py  run_bot.py  run_scheduler.py  test_trading.py
stocks/migrations/: 0001_initial.py  0002_stock_ai_decision_stock_ai_score_stock_current_price_and_more.py  0003_stock_is_w_pattern_stock_w_score.py  0004_dailyprice_ma20_dailyprice_ma5_dailyprice_ma60_and_more.py  0005_alter_stock_ai_decision_alter_stock_code_and_more.py  0006_tradelog.py
stocks/templates/stocks/: stock_detail.html  stock_list.html  w_dashboard.html
