[project]
name = "stock-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0.1",
    "google-genai>=1.60.0",
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
]
